# morans

./: Morans.hs  morans.cabal  morans.hs
