cabal-version:       3.0
name:                morans
version:             0.0.0.0

library
  hs-source-dirs:      .
  exposed-modules:     Morans
  build-depends:       base,
                       bytestring,
                       hedgehog,
                       random,
                       zlib
  default-language:    Haskell2010
